<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/white"
    tools:context="com.prueba.evaluacionapp.activity.Ingresoasignatura">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/etnombre2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="312dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <EditText
        android:id="@+id/mtresultado"
        android:layout_width="349dp"
        android:layout_height="129dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/multitextview"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableRow">

        <EditText
            android:id="@+id/txthora"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="time"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnhora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnhora" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <EditText
            android:id="@+id/txtfecha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="date"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnfecha" />
    </TableRow>

    <Button
        android:id="@+id/btn"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:onClick="obtenerinformacion"
        android:text="@string/btningresar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtresultado" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="siguiente"
        android:text="@string/btnsiguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/btn"
        app:layout_constraintTop_toBottomOf="@+id/mtresultado" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="Jornada"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="85dp"
            android:layout_height="47dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/rb1"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rb2"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>